--- a/booking-challenge/src/app/components/new-booking/new-booking.component.html
+++ b/booking-challenge/src/app/components/new-booking/new-booking.component.html
@@ -1,6 +1,6 @@
 <section class="container">
   <div class="iconAndTitle">
-    <button mat-icon-button color="primary" (click)="goToHome()">
+    <button mat-icon-button color="primary" (click)="goTo('')">
       <mat-icon>chevron_left</mat-icon>
     </button>
     <h1 class="title">New Booking:</h1>  
